--- a/index.html
+++ b/index.html
@@ -14,35 +14,7 @@
 <body>
   <header class="header">
     <div class="left-section">
-      <img class="hamburger-menu" src="img/icons/hamburger-menu.svg" alt="hamburger-menu">
-      <img class="youtube-logo" src="img/icons/youtube-logo.svg" alt="youtube-logo">
-    </div>
-    <div class="middle-section">
-      <input class="search-bar" type="text" placeholder="Search">
-      <button class="search-button">
-        <img class="search-icon" src="img/icons/search.svg" alt="search">
-        <div class="tooltip">Search</div>
-      </button>
-      <button class="voice-search-button">
-        <img class="voice-search-icon" src="img/icons/voice-search-icon.svg" alt="voice-search-button">
-        <div class="tooltip">Search with your voice</div>
-      </button>
-    </div>
-    <div class="right-section">
-      <div class="upload-icon-container">
-        <img class="upload-icon" src="img/icons/upload.svg" alt="upload">
-        <div class="tooltip">Create</div>
-      </div>
-      <div class="youtube-apps-icon-container">
-        <img class="youtube-apps-icon" src="img/icons/youtube-apps.svg" alt="youtube-apps">
-        <div class="tooltip">YouTube apps</div>
-      </div>
-      <div class="notifications-icon-container">
-        <img class="notifications-icon" src="img/icons/notifications.svg" alt="notifications">
-        <div class="notifications-count">3</div>
-        <div class="tooltip">Notifications</div>
-      </div>
-      <img class="logo-icon" src="img/logo.png" alt="logo">
+      <a href="">Mani Bikes</a>
     </div>
   </header>
   <main>
