--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>YouTube.com Clone</title>
+  <title>Mani Bikes</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 <body>
   <header class="header">
     <div class="left-section">
-      <a href="">Mani Bikes</a>
+      <a href="https://manikandanradha.github.io">Mani Bikes</a>
     </div>
   </header>
   <main>
