--- a/index.html
+++ b/index.html
@@ -29,13 +29,16 @@
           </div>
           <div class="video-info">
             <p class="video-title">
-              Talking Tech and AI with Google CEO Sundar Pichai!
+              Bajaj Pulsar - 2011 - 2nd owner - 15000
             </p>
             <p class="video-author">
-              Marques Brownlee
+              Year: 2011
             </p>
             <p class="video-stats">
-              3.4M views &#183; 6 months ago
+              Owner: 2nd
+            </p>
+            <p class="video-stats"></p>
+              Price: 15000
             </p>
           </div>
         </div>
