removed profile section

--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
   <main>
     <section class="video-grid">
       <div class="video-preview">
-        <div class="thumbnail-row">
-          <img class="thumbnail" src="img/thumbnail-1.webp" alt="thumbnail-1">
-        </div>
         <div class="video-info-grid">
           <div class="channel-picture">
             <img class="profile-picture" src="img/profile/channel-1.jpeg" alt="channel-1">
@@ -37,16 +34,13 @@
             <p class="video-stats">
               Owner: 2nd
             </p>
-            <p class="video-stats"></p>
+            <p class="video-stats">
               Price: 15000
             </p>
           </div>
         </div>
       </div>
       <div class="video-preview">
-        <div class="thumbnail-row">
-          <img class="thumbnail" src="img/thumbnail-2.webp" alt="thumbnail-1">
-        </div>
         <div class="video-info-grid">
           <div class="channel-picture">
             <img class="profile-picture" src="img/profile/channel-2.jpeg" alt="channel-2">
@@ -65,9 +59,6 @@
         </div>
       </div>
       <div class="video-preview">
-        <div class="thumbnail-row">
-          <img class="thumbnail" src="img/thumbnail-3.webp" alt="thumbnail-1">
-        </div>
         <div class="video-info-grid">
           <div class="channel-picture">
             <img class="profile-picture" src="img/profile/channel-3.jpeg" alt="channel-1">
@@ -86,9 +77,6 @@
         </div>
       </div>
       <div class="video-preview">
-        <div class="thumbnail-row">
-          <img class="thumbnail" src="img/thumbnail-4.webp" alt="thumbnail-1">
-        </div>
         <div class="video-info-grid">
           <div class="channel-picture">
             <img class="profile-picture" src="img/profile/channel-4.jpeg" alt="channel-2">
@@ -107,9 +95,6 @@
         </div>
       </div>
       <div class="video-preview">
-        <div class="thumbnail-row">
-          <img class="thumbnail" src="img/thumbnail-5.webp" alt="thumbnail-1">
-        </div>
         <div class="video-info-grid">
           <div class="channel-picture">
             <img class="profile-picture" src="img/profile/channel-5.jpeg" alt="channel-1">
@@ -128,9 +113,6 @@
         </div>
       </div>
       <div class="video-preview">
-        <div class="thumbnail-row">
-          <img class="thumbnail" src="img/thumbnail-6.webp" alt="thumbnail-1">
-        </div>
         <div class="video-info-grid">
           <div class="channel-picture">
             <img class="profile-picture" src="img/profile/channel-6.jpeg" alt="channel-2">
@@ -149,9 +131,6 @@
         </div>
       </div>
       <div class="video-preview">
-        <div class="thumbnail-row">
-          <img class="thumbnail" src="img/thumbnail-7.webp" alt="thumbnail-1">
-        </div>
         <div class="video-info-grid">
           <div class="channel-picture">
             <img class="profile-picture" src="img/profile/channel-7.jpeg" alt="channel-1">
@@ -170,9 +149,6 @@
         </div>
       </div>
       <div class="video-preview">
-        <div class="thumbnail-row">
-          <img class="thumbnail" src="img/thumbnail-8.webp" alt="thumbnail-1">
-        </div>
         <div class="video-info-grid">
           <div class="channel-picture">
             <img class="profile-picture" src="img/profile/channel-8.jpeg" alt="channel-2">
