--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   <main>
     <section class="video-grid">
       <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="img/thumbnail-1.webp" alt="thumbnail-1">
+        </div>
         <div class="video-info-grid">
-          <div class="channel-picture">
-            <img class="profile-picture" src="img/profile/channel-1.jpeg" alt="channel-1">
-          </div>
           <div class="video-info">
             <p class="video-title">
               Bajaj Pulsar - 2011 - 2nd owner - 15000
@@ -41,10 +41,10 @@
         </div>
       </div>
       <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="img/thumbnail-2.webp" alt="thumbnail-1">
+        </div>
         <div class="video-info-grid">
-          <div class="channel-picture">
-            <img class="profile-picture" src="img/profile/channel-2.jpeg" alt="channel-2">
-          </div>
           <div class="video-info">
             <p class="video-title">
               Try Not To Laugh Challenge #9
@@ -59,10 +59,10 @@
         </div>
       </div>
       <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="img/thumbnail-3.webp" alt="thumbnail-1">
+        </div>
         <div class="video-info-grid">
-          <div class="channel-picture">
-            <img class="profile-picture" src="img/profile/channel-3.jpeg" alt="channel-1">
-          </div>
           <div class="video-info">
             <p class="video-title">
               Crazy Tik Toks Taken Moments Before DISASTER
@@ -77,10 +77,10 @@
         </div>
       </div>
       <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="img/thumbnail-4.webp" alt="thumbnail-1">
+        </div>
         <div class="video-info-grid">
-          <div class="channel-picture">
-            <img class="profile-picture" src="img/profile/channel-4.jpeg" alt="channel-2">
-          </div>
           <div class="video-info">
             <p class="video-title">
               The Simplest Math Problem No One Can Solve - Collatz Conjecture
@@ -95,10 +95,10 @@
         </div>
       </div>
       <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="img/thumbnail-5.webp" alt="thumbnail-1">
+        </div>
         <div class="video-info-grid">
-          <div class="channel-picture">
-            <img class="profile-picture" src="img/profile/channel-5.jpeg" alt="channel-1">
-          </div>
           <div class="video-info">
             <p class="video-title">
               Kadane's Algorithm to Maximum Sum Subarray Problem
@@ -113,10 +113,10 @@
         </div>
       </div>
       <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="img/thumbnail-6.webp" alt="thumbnail-1">
+        </div>
         <div class="video-info-grid">
-          <div class="channel-picture">
-            <img class="profile-picture" src="img/profile/channel-6.jpeg" alt="channel-2">
-          </div>
           <div class="video-info">
             <p class="video-title">
               Anything You Can Fit In The Circle I’ll Pay For
@@ -131,10 +131,10 @@
         </div>
       </div>
       <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="img/thumbnail-7.webp" alt="thumbnail-1">
+        </div>
         <div class="video-info-grid">
-          <div class="channel-picture">
-            <img class="profile-picture" src="img/profile/channel-7.jpeg" alt="channel-1">
-          </div>
           <div class="video-info">
             <p class="video-title">
               Why Planes Don't Fly Over Tibet
@@ -149,10 +149,10 @@
         </div>
       </div>
       <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="img/thumbnail-8.webp" alt="thumbnail-1">
+        </div>
         <div class="video-info-grid">
-          <div class="channel-picture">
-            <img class="profile-picture" src="img/profile/channel-8.jpeg" alt="channel-2">
-          </div>
           <div class="video-info">
             <p class="video-title">
               Inside The World's Biggest Passenger Plane
