video-info-grid 1fr

--- a/index.html
+++ b/index.html
@@ -25,18 +25,10 @@
         </div>
         <div class="video-info-grid">
           <div class="video-info">
-            <p class="video-title">
-              Bajaj Pulsar - 2011 - 2nd owner - 15000
-            </p>
-            <p class="video-author">
-              Year: 2011
-            </p>
-            <p class="video-stats">
-              Owner: 2nd
-            </p>
-            <p class="video-stats">
-              Price: 15000
-            </p>
+            <p class="video-title">Bajaj Pulsar - 2011 - 2nd owner - 15000</p>
+            <p class="video-author">Year: 2011</p>
+            <p class="video-stats">Owner: 2nd</p>
+            <p class="video-stats">Price: 15000</p>
           </div>
         </div>
       </div>
