--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="video-info">
             <p class="video-title">Bajaj Pulsar - 2011 - 2nd owner - 15000</p>
             <p class="video-author">Year: 2011</p>
-            <p class="video-stats">Owner: 2nd</p>
+            <p class="video-author">Owner: 2nd</p>
             <p class="video-stats">Price: 15000</p>
           </div>
         </div>
