added color for site name

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header class="header">
     <div class="left-section">
-      <a href="https://manikandanradha.github.io">Mani Bikes</a>
+      <a class= "site-name" href="https://manikandanradha.github.io">Mani Bikes</a>
     </div>
   </header>
   <main>
