--- a/index.html
+++ b/index.html
@@ -38,15 +38,10 @@
         </div>
         <div class="video-info-grid">
           <div class="video-info">
-            <p class="video-title">
-              Try Not To Laugh Challenge #9
-            </p>
-            <p class="video-author">
-              Markiplier
-            </p>
-            <p class="video-stats">
-              19M views &#183; 4 years ago
-            </p>
+            <p class="video-title">Bajaj Pulsar - 2011 - 2nd owner - 15000</p>
+            <p class="video-author">Year: 2011</p>
+            <p class="video-author">Owner: 2nd</p>
+            <p class="video-stats">Price: 15000</p>
           </div>
         </div>
       </div>
@@ -56,15 +51,10 @@
         </div>
         <div class="video-info-grid">
           <div class="video-info">
-            <p class="video-title">
-              Crazy Tik Toks Taken Moments Before DISASTER
-            </p>
-            <p class="video-author">
-              SSSniperWolf
-            </p>
-            <p class="video-stats">
-              12M views &#183; 1 year ago
-            </p>
+            <p class="video-title">Bajaj Pulsar - 2011 - 2nd owner - 15000</p>
+            <p class="video-author">Year: 2011</p>
+            <p class="video-author">Owner: 2nd</p>
+            <p class="video-stats">Price: 15000</p>
           </div>
         </div>
       </div>
@@ -74,15 +64,10 @@
         </div>
         <div class="video-info-grid">
           <div class="video-info">
-            <p class="video-title">
-              The Simplest Math Problem No One Can Solve - Collatz Conjecture
-            </p>
-            <p class="video-author">
-              Veritasium
-            </p>
-            <p class="video-stats">
-              18M views &#183; 4 months ago
-            </p>
+            <p class="video-title">Bajaj Pulsar - 2011 - 2nd owner - 15000</p>
+            <p class="video-author">Year: 2011</p>
+            <p class="video-author">Owner: 2nd</p>
+            <p class="video-stats">Price: 15000</p>
           </div>
         </div>
       </div>
@@ -92,15 +77,10 @@
         </div>
         <div class="video-info-grid">
           <div class="video-info">
-            <p class="video-title">
-              Kadane's Algorithm to Maximum Sum Subarray Problem
-            </p>
-            <p class="video-author">
-              CS Dojo
-            </p>
-            <p class="video-stats">
-              519K views &#183; 5 years ago
-            </p>
+            <p class="video-title">Bajaj Pulsar - 2011 - 2nd owner - 15000</p>
+            <p class="video-author">Year: 2011</p>
+            <p class="video-author">Owner: 2nd</p>
+            <p class="video-stats">Price: 15000</p>
           </div>
         </div>
       </div>
@@ -110,15 +90,10 @@
         </div>
         <div class="video-info-grid">
           <div class="video-info">
-            <p class="video-title">
-              Anything You Can Fit In The Circle I’ll Pay For
-            </p>
-            <p class="video-author">
-              MrBeast
-            </p>
-            <p class="video-stats">
-              141M views &#183; 1 year ago
-            </p>
+            <p class="video-title">Bajaj Pulsar - 2011 - 2nd owner - 15000</p>
+            <p class="video-author">Year: 2011</p>
+            <p class="video-author">Owner: 2nd</p>
+            <p class="video-stats">Price: 15000</p>
           </div>
         </div>
       </div>
@@ -128,15 +103,10 @@
         </div>
         <div class="video-info-grid">
           <div class="video-info">
-            <p class="video-title">
-              Why Planes Don't Fly Over Tibet
-            </p>
-            <p class="video-author">
-              RealLifeLore
-            </p>
-            <p class="video-stats">
-              6.6M views &#183; 1 year ago
-            </p>
+            <p class="video-title">Bajaj Pulsar - 2011 - 2nd owner - 15000</p>
+            <p class="video-author">Year: 2011</p>
+            <p class="video-author">Owner: 2nd</p>
+            <p class="video-stats">Price: 15000</p>
           </div>
         </div>
       </div>
@@ -146,15 +116,23 @@
         </div>
         <div class="video-info-grid">
           <div class="video-info">
-            <p class="video-title">
-              Inside The World's Biggest Passenger Plane
-            </p>
-            <p class="video-author">
-              Tech Vision
-            </p>
-            <p class="video-stats">
-              3.7M views &#183; 10 months ago
-            </p>
+            <p class="video-title">Bajaj Pulsar - 2011 - 2nd owner - 15000</p>
+            <p class="video-author">Year: 2011</p>
+            <p class="video-author">Owner: 2nd</p>
+            <p class="video-stats">Price: 15000</p>
+          </div>
+        </div>
+      </div>
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="img/thumbnail-8.webp" alt="thumbnail-1">
+        </div>
+        <div class="video-info-grid">
+          <div class="video-info">
+            <p class="video-title">Bajaj Pulsar - 2011 - 2nd owner - 15000</p>
+            <p class="video-author">Year: 2011</p>
+            <p class="video-author">Owner: 2nd</p>
+            <p class="video-stats">Price: 15000</p>
           </div>
         </div>
       </div>
