--- a/index.html
+++ b/index.html
@@ -21,14 +21,16 @@
     <section class="video-grid">
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="img/thumbnail-1.webp" alt="thumbnail-1">
+          <img class="thumbnail" src="img/re/2015-re-classic-350-1.jpg" alt="thumbnail-1">
         </div>
         <div class="video-info-grid">
           <div class="video-info">
-            <p class="video-title">Bajaj Pulsar - 2011 - 2nd owner - 15000</p>
-            <p class="video-author">Year: 2011</p>
-            <p class="video-author">Owner: 2nd</p>
-            <p class="video-stats">Price: 15000</p>
+            <p class="video-title">Royal Enfield Classic 350 - 2015 - 1st owner - 130000</p>
+            <p class="video-author">Year: 2015</p>
+            <p class="video-author">Owner: 1st</p>
+            <p class="video-author">Colour: Black</p>
+            <p class="video-author">Location: Anjugramam</p>
+            <p class="video-stats">Price: 130000</p>
           </div>
         </div>
       </div>
