--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <div class="left-section">
       <a class= "site-name" href="https://manikandanradha.github.io">Mani Bikes</a>
     </div>
+    <div class="right-section"></div>
+      <p class="phone-number">+91 9385307184</p>
+    </div>
   </header>
   <main>
     <section class="video-grid">
