--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
       <a class= "site-name" href="https://manikandanradha.github.io">Mani Bikes</a>
     </div>
     <div class="right-section"></div>
-      <p class="phone-number">+91 9385307184</p>
+      <div>
+        <p class="phone-number">+91 9385307184</p>
+      </div>
     </div>
   </header>
   <main>
