--- a/index.html
+++ b/index.html
@@ -36,53 +36,56 @@
       </div>
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="img/thumbnail-2.webp" alt="thumbnail-1">
+          <img class="thumbnail" src="img/hero/2011-hero-honda.jpg" alt="thumbnail-1">
         </div>
         <div class="video-info-grid">
           <div class="video-info">
-            <p class="video-title">Bajaj Pulsar - 2011 - 2nd owner - 15000</p>
+            <p class="video-title">Splendor - 2011 - 1st owner - 25000</p>
             <p class="video-author">Year: 2011</p>
-            <p class="video-author">Owner: 2nd</p>
-            <p class="video-stats">Price: 15000</p>
+            <p class="video-author">Owner: 1st</p>
+            <p class="video-author">Colour: Black</p>
+            <p class="video-stats">Price: 25000</p>
           </div>
         </div>
       </div>
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="img/thumbnail-3.webp" alt="thumbnail-1">
+          <img class="thumbnail" src="img/New folder/2018-unicorn-black.jpg" alt="thumbnail-1">
         </div>
         <div class="video-info-grid">
           <div class="video-info">
-            <p class="video-title">Bajaj Pulsar - 2011 - 2nd owner - 15000</p>
-            <p class="video-author">Year: 2011</p>
-            <p class="video-author">Owner: 2nd</p>
-            <p class="video-stats">Price: 15000</p>
+            <p class="video-title">Unicorn - 2018 - 1st owner - 46000</p>
+            <p class="video-author">Year: 2018</p>
+            <p class="video-author">Owner: 1st</p>
+            <p class="video-author">Colour: Black</p>
+            <p class="video-stats">Price: 46000</p>
           </div>
         </div>
       </div>
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="img/thumbnail-4.webp" alt="thumbnail-1">
+          <img class="thumbnail" src="img/bajaj/2012-discover-100cc.jpg" alt="thumbnail-1">
         </div>
         <div class="video-info-grid">
           <div class="video-info">
-            <p class="video-title">Bajaj Pulsar - 2011 - 2nd owner - 15000</p>
-            <p class="video-author">Year: 2011</p>
-            <p class="video-author">Owner: 2nd</p>
-            <p class="video-stats">Price: 15000</p>
+            <p class="video-title">Discover - 2012 - 1st owner - 21000</p>
+            <p class="video-author">Year: 2012</p>
+            <p class="video-author">Owner: 1st</p>
+            <p class="video-stats">Price: 21000</p>
           </div>
         </div>
       </div>
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="img/thumbnail-5.webp" alt="thumbnail-1">
+          <img class="thumbnail" src="img/susuki/maruti-susuki.jpg" alt="thumbnail-1">
         </div>
         <div class="video-info-grid">
           <div class="video-info">
-            <p class="video-title">Bajaj Pulsar - 2011 - 2nd owner - 15000</p>
-            <p class="video-author">Year: 2011</p>
-            <p class="video-author">Owner: 2nd</p>
-            <p class="video-stats">Price: 15000</p>
+            <p class="video-title">Maruti susuki - 2010 - 4th owner - 460000</p>
+            <p class="video-author">Year: 2010</p>
+            <p class="video-author">Owner: 4th</p>
+            <p class="video-author">Colour: Silver/gray</p>
+            <p class="video-stats">Price: 460000</p>
           </div>
         </div>
       </div>
