fixed phone number

--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
     <div class="left-section">
       <a class= "site-name" href="https://manikandanradha.github.io">Mani Bikes</a>
     </div>
-    <div class="right-section"></div>
-      <div>
-        <p class="phone-number">+91 9385307184</p>
-      </div>
+    <div class="right-section">
+      <p class="phone-number">+91 9385307184</p>
     </div>
   </header>
   <main>
