--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="img/New folder/2018-unicorn-black.jpg" alt="thumbnail-1">
+          <img class="thumbnail" src="img/honda/2018-unicorn-black.jpg" alt="thumbnail-1">
         </div>
         <div class="video-info-grid">
           <div class="video-info">
